# libspm

./: .gitmodules  CMakeLists.txt
doc/: CMakeLists.txt  SphinxConfig.cmake  conf.py.in  doxygen_cfg  index.rst.in  requirements.txt  sphinx_doxygen_cfg
jstmap/: CMakeLists.txt
jstmap-create/: CMakeLists.txt
jstmap-create/jstmap/create/: create_main.cpp  create_main.hpp  journaled_sequence_tree_builder.cpp  journaled_sequence_tree_builder.hpp  load_sequence.cpp  load_sequence.hpp  options.hpp  serialise_jst.hpp  stripped_vcf_record.cpp  stripped_vcf_record.hpp  vcf_parser.cpp  vcf_parser.hpp  vcf_parser2.cpp
jstmap-global/: CMakeLists.txt
jstmap-global/jstmap/global/: all_matches.hpp  application_logger.cpp  application_logger.hpp  bam_writer.cpp  bam_writer.hpp  jstmap_jst_types.hpp  jstmap_type_alias.hpp  jstmap_types.hpp  load_jst.cpp  load_jst.hpp  match_position.hpp  options_base.hpp  search_match.hpp  search_matches.hpp  search_query.hpp  tool_parser.hpp
jstmap-index/: CMakeLists.txt
jstmap-index/jstmap/index/: application_logger.cpp  application_logger.hpp  create_index.cpp  create_index.hpp  global_types.hpp  index_main.cpp  index_main.hpp  journaled_sequence_tree_builder.cpp  journaled_sequence_tree_builder.hpp  load_sequence.cpp  load_sequence.hpp  options.hpp  save_index.cpp  save_index.hpp  serialise_jst.hpp  vcf_parser.cpp  vcf_parser.hpp
jstmap-linear/: CMakeLists.txt
jstmap-linear/jstmap/linear/: linear_main.cpp  linear_main.hpp  options.hpp
jstmap-search/: CMakeLists.txt
jstmap-search/jstmap/search/: bucket.hpp  bucket_searcher.hpp  filter_queries.cpp  filter_queries.hpp  global_types.hpp  load_jst.cpp  load_jst.hpp  load_queries.cpp  load_queries.hpp  match.hpp  match_aligner.cpp  match_aligner.hpp  matching_operation.hpp  options.hpp  pigeonhole_filter.hpp  search_main.cpp  search_main.hpp  search_queries.cpp  search_queries.hpp  search_queries2.cpp  seed_extension_tree.hpp  seed_node_wrapper.hpp  seed_prefix_extender.hpp  seed_prefix_finder.hpp  seed_prefix_node_cargo.hpp  seed_prefix_seek_position.hpp  seed_suffix_extender.hpp  seed_verifier.hpp  type_alias.hpp  write_results.cpp  write_results.hpp
jstmap-simulate/: CMakeLists.txt
jstmap-simulate/jstmap/simulate/: global_types.hpp  load_reference.cpp  load_reference.hpp  options.hpp  read_sampler.cpp  read_sampler.hpp  simulate_alignment.cpp  simulate_alignment.hpp  simulate_main.cpp  simulate_main.hpp
jstmap-view/: CMakeLists.txt
jstmap-view/jstmap/view/: global_types.hpp  load_jst.cpp  load_jst.hpp  options.hpp  view_format_fasta.cpp  view_format_fasta.hpp  view_main.cpp  view_main.hpp
jstmap/jstmap/: main.cpp
libcontrib/: CMakeLists.txt
libcontrib/libcontrib/: closure_adaptor.hpp  copyable_box.hpp  type_traits.hpp
libcontrib/libcontrib/execute/: concept_operation.hpp  concept_receiver.hpp  concept_sender.hpp  concept_stream.hpp  for_each_stream.hpp  make_sender.hpp  make_stream.hpp  ready_done.hpp  run.hpp  then.hpp  transform_stream.hpp
libcontrib/libcontrib/matcher/: concept.hpp  horspool_matcher.hpp  myers_matcher.hpp  myers_matcher_restorable.hpp  myers_prefix_matcher_restorable.hpp  pigeonhole_matcher.hpp  seqan_pattern_base.hpp  seqan_restorable_pattern.hpp  shiftor_matcher.hpp  shiftor_matcher_restorable.hpp
libcontrib/libcontrib/seqan/: alphabet.hpp  concept.hpp  container_adapter.hpp  holder_tristate.hpp  horspool_pattern.hpp  iterator.hpp  pattern_operation.hpp  shiftor_pattern.hpp
libio/: CMakeLists.txt
libio/libio/: noop_token.hpp  stream_token.hpp
libio/libio/file/: consume_tokenizer.hpp  field_code.hpp  find_if.hpp  formatted_file.hpp  formatted_stream.hpp  line_tokenizer.hpp  pivot_tokenizer.hpp  segment_tokenizer.hpp  token_get_area.hpp  token_matcher.hpp  tokenization.hpp  tokenized_stream.hpp  tokenized_stream_buffer.hpp  tokenizer_streambuffer_adaptor.hpp  unformatted_file.hpp  until_tokenizer.hpp
libio/libio/format/: format_concept.hpp  format_extension.hpp
libio/libio/record/: fasta_record.hpp  fastq_record.hpp  record_concept.hpp
libio/libio/utility/: format_traits.hpp  tag_invoke.hpp  type_traits.hpp
libjst/: CMakeLists.txt
libjst/libjst/: concept.hpp  context_position.hpp  journal.hpp  journal_decorator.hpp  journal_decorator_revertable.hpp  journal_entry.hpp  journal_sequence.hpp  journal_sequence_tree_context_enumerator.hpp  journal_sequence_tree_coordinate.hpp  journal_sequence_tree_partitioned.hpp  journal_sequence_tree_position_agent.hpp  journal_sequence_tree_range_agent.hpp  journal_sequence_tree_range_extender_agent.hpp  journaled_sequence_tree.hpp  journaled_sequence_tree_cursor.hpp  journaled_sequence_tree_forward.hpp  reference_position.hpp
libjst/libjst/container/: concept_serialiser.hpp  journaled_path.hpp  journaled_sequence_group.hpp  jst_backward.hpp  jst_base.hpp  jst_forward.hpp  serialiser_delegate.hpp  serialiser_direct.hpp  set_partitioned.hpp
libjst/libjst/coverage/: bit_coverage.hpp  concept.hpp  int_coverage.hpp  range_domain.hpp
libjst/libjst/detail/: branch_stack.hpp  delta_event.hpp  delta_event_shared.hpp  delta_kind_base.hpp  delta_kind_deletion.hpp  delta_kind_insertion.hpp  delta_kind_snp.hpp  delta_kind_substitution.hpp  journal_sequence_tree_event_base.hpp  journal_sequence_tree_event_branch.hpp  journal_sequence_tree_event_join.hpp  journal_sequence_tree_traverser.hpp  journal_sequence_tree_traverser_model.hpp  transform_to_delta_events.hpp
libjst/libjst/journal/: any_sequence.hpp  basic_multisequence_journal.hpp  breakpoint_multijournal.hpp  breakpoint_multijournal_sequence_tree_adapter.hpp  coverage_augmented_breakpoint_multijournal.hpp  coverage_augmented_multisequence_journal.hpp  inline_sequence_journal.hpp
libjst/libjst/journaled_sequence_tree/: concept.hpp  journaled_sequence_tree_backward.hpp  journaled_sequence_tree_forward.hpp  journaled_sequence_tree_model.hpp  serialiser_delegate.hpp  (+1 more)
libspm/: CMakeLists.txt
libspm/libspm/: closure_adaptor.hpp  copyable_box.hpp  type_traits.hpp
test/api/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  jst_bench_env.yml
(+764 files in other folders)
